# FinancialManagement

./: AccountDummy.hpp  CMakeLists.txt  ExampleFile.csv  MAIN.cpp  README.md  Test.cpp  UserInfo.csv  UserInfo.txt  UserInfoDummy.hpp  accountList.cpp  accountList.hpp  c-main2.cpp  csvSave.cpp  csvSave.hpp  main.cpp  strategy.cpp  strategy.hpp  test.cpp  txtSave.cpp  txtSave.hpp  userInfo.cpp  userInfo.hpp  userInfo_test.cpp
files/: UserInfo.csv  UserInfo.txt
header/: Account.hpp  CheckingAccount.hpp  CheckingAccountProxy.hpp  SavingAccount.hpp  SavingAccountProxy.hpp  accountList.hpp  csvSave.hpp  txtSave.hpp  userInfo.hpp
histories/: 1234.txt  2.txt  3.txt  5678.txt
src/: CheckingAccount.cpp  CheckingAccountProxy.cpp  SavingAccount.cpp  SavingAccountProxy.cpp  UserInterface.cpp  accountList.cpp  csvSave.cpp  main.cpp  txtSave.cpp
tests/: CheckingAccountProxy_test.hpp  CheckingAccount_test.hpp  SavingAccountProxy_test.hpp  SavingAccount_test.hpp  userInfo_test.hpp
